<resources>
    <string name="app_name" translatable="false">Red De Esperanza</string>
    <string name="app_version" translatable="false">7.6</string>
    <string name="app_year" translatable="false">2025</string>
    <string name="app_copyright" translatable="false">reddeesperanza.com</string>
    <string name="app_email" translatable="false">raccoonsquare@gmail.com</string>
    <string name="app_site" translatable="false">https://reddeesperanza.com</string>
    <string name="app_lang_code">en</string>
    <string name="facebook_app_id" translatable="false">4534345345345</string>
    <string name="facebook_client_token" translatable="false">66c8669b56b150fb47d0ca7a0288c774a</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb4534345345345</string>
    <string name="banner_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_native_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/2247696110</string>
    <string name="interstitial_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_app_id" translatable="false">ca-app-pub-3940256099942544~3347511713</string>
    <string name="rewarded_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
    <string name="action_login">Log in</string>
    <string name="action_signup">Sign up</string>
    <string name="action_logout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="action_continue">Continue</string>
    <string name="action_unblock">Unblock</string>
    <string name="action_block">Block</string>
    <string name="action_about">About</string>
    <string name="action_ok">OK</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_copy">Copy</string>
    <string name="action_save">Save</string>
    <string name="action_send">Send</string>
    <string name="action_open">Open</string>
    <string name="action_edit">Edit</string>
    <string name="action_reply">Reply</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_report">Report</string>
    <string name="action_remove">Delete</string>
    <string name="action_remove_chat">Delete chat</string>
    <string name="action_deactivate">Deactivate</string>
    <string name="action_create">Create</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_close">Close</string>
    <string name="action_more">Load more</string>
    <string name="action_post">Post</string>
    <string name="action_search">Search</string>
    <string name="action_retry">Retry</string>
    <string name="action_turn_on">Turn on</string>
    <string name="action_turn_off">Turn off</string>
    <string name="action_select_birth">Date of Birth</string>
    <string name="action_camera">Camera</string>
    <string name="action_gallery">Choose from gallery</string>
    <string name="action_copy_url">Copy link</string>
    <string name="action_open_url">Open in a browser</string>
    <string name="settings_allow_comments">Allow comments to my posts</string>
    <string name="settings_allow_messages">Receive messages from anyone</string>
    <string name="settings_allow_messages_summary">You will be able to receive Direct Messages from any user even if the user is not your friend.</string>
    <string name="action_share">Share</string>
    <string name="action_share_on_wall">On my wall</string>
    <string name="action_follow">Follow</string>
    <string name="action_unfollow">Unfollow</string>
    <string name="action_new">New post</string>
    <string name="action_profile_edit_photo">Edit photo</string>
    <string name="action_profile_edit_cover">Edit cover</string>
    <string name="action_profile_edit">Edit</string>
    <string name="action_login_with_facebook">Log in with Facebook</string>
    <string name="action_signup_with_facebook">Sign up with Facebook</string>
    <string name="action_connect_with_facebook">Connect with Facebook</string>
    <string name="action_remove_connection">Remove connection</string>
    <string name="action_regular_signup">Back to the regular registration form</string>
    <string name="action_forgot_password">Forgot password?</string>
    <string name="label_profile_report_0">Spam</string>
    <string name="label_profile_report_1">Hate speech or violence</string>
    <string name="label_profile_report_2">Nudity or Pornography</string>
    <string name="label_profile_report_3">Fake profile</string>
    <string name="label_profile_report_4">Piracy</string>
    <string name="label_sex_undefined">Gender Not Set</string>
    <string name="label_sex_male">Gender Male</string>
    <string name="label_sex_female">Gender Female</string>
    <string name="placeholder_password">Password</string>
    <string name="placeholder_login">Username</string>
    <string name="placeholder_fullname">Fullname</string>
    <string name="placeholder_location">Location</string>
    <string name="placeholder_facebook_page">Facebook page</string>
    <string name="placeholder_instagram_page">Instagram page</string>
    <string name="placeholder_bio">Bio</string>
    <string name="placeholder_email">Email</string>
    <string name="placeholder_subject">Subject</string>
    <string name="placeholder_support_detail">What are you contacting us about?</string>
    <string name="placeholder_current_password">Current password</string>
    <string name="placeholder_new_password">New password</string>
    <string name="placeholder_item_category">Category</string>
    <string name="placeholder_item_title">Title</string>
    <string name="placeholder_item_login">Username, email or phone</string>
    <string name="placeholder_item_passw">Password</string>
    <string name="placeholder_item_url">Web site</string>
    <string name="placeholder_item_description">Description</string>
    <string name="placeholder_post">What\'s on your mind?</string>
    <string name="placeholder_search">Search</string>
    <string name="placeholder_comment">Type a comment&#8230;</string>
    <string name="placeholder_message">Type a message&#8230;</string>
    <string name="placeholder_repost">Your comment&#8230;</string>
    <string name="msg_loading">Please wait&#8230;</string>
    <string name="msg_loading_2">Loading. Please wait&#8230;</string>
    <string name="msg_network_error">Please check your Internet connection</string>
    <string name="msg_account_blocked">This account is blocked by a moderator.</string>
    <string name="msg_copied_to_clipboard">Copied to clipboard.</string>
    <string name="msg_enter_item">Please write something or attach photo.</string>
    <string name="msg_enter_msg">Please write something or attach photo.</string>
    <string name="msg_send_msg_error">You can not send a message to the user.</string>
    <string name="msg_item_posted">Item has been posted successfully.</string>
    <string name="msg_item_saved">Item has been saved successfully.</string>
    <string name="msg_password_changed">Password successfully changed</string>
    <string name="msg_settings_saved">Settings successfully saved.</string>
    <string name="msg_ticket_send_success">Your request is accepted! You will receive a response to the email, which is indicated in the request.</string>
    <string name="msg_password_reset_link_sent">A message with link to reset your password has been sent to your email.</string>
    <string name="msg_no_such_user_in_bd">No such user in database</string>
    <string name="msg_connect_to_facebook_success">You have successfully linked application with your account on Facebook!</string>
    <string name="msg_connect_to_facebook_error">Your account on Facebook is already associated with another account.</string>
    <string name="msg_connect_to_facebook_removed">Connect with your Facebook account removed.</string>
    <string name="msg_comment_has_been_added">Comment has been added.</string>
    <string name="msg_chat_has_been_removed">Chat has been removed.</string>
    <string name="msg_profile_removed_from_blacklist">The user is removed from blocked list.</string>
    <string name="msg_profile_link_copied">Profile link copied to clipboard.</string>
    <string name="msg_post_link_copied">Post link copied to clipboard.</string>
    <string name="msg_profile_added_to_blacklist">The user is added to blocked list.</string>
    <string name="msg_comments_disabled">The user does not want to comment on his posts.</string>
    <string name="msg_post_has_been_shared">This post has been shared to your friends news feeds.</string>
    <string name="msg_post_has_been_already_shared">You have already shared this post.</string>
    <string name="msg_post_has_shared_error">You may not repost your posts.</string>
    <string name="error_signin">Incorrect username or password</string>
    <string name="error_internet_connection">No internet connection</string>
    <string name="error_data_loading">When loading data error has occurred. Check your network connection.</string>
    <string name="error_field_empty">Required fields are empty</string>
    <string name="error_wrong_format">Wrong format</string>
    <string name="error_small_password">Minimum 6 characters</string>
    <string name="error_small_username">Minimum 5 characters</string>
    <string name="error_small_fullname">Minimum 2 characters</string>
    <string name="error_login_taken">Username is already taken</string>
    <string name="error_email_taken">User with this mail is already registered</string>
    <string name="error_password">Invalid password.</string>
    <string name="error_email">Email invalid.</string>
    <string name="label_gcm_like">You have new like.</string>
    <string name="label_gcm_comment">You have a new comment.</string>
    <string name="label_gcm_follower">You have a new follower.</string>
    <string name="label_gcm_friend">You have a new friend.</string>
    <string name="label_gcm_message">You have a new message.</string>
    <string name="signup_label_terms_and_policies">Terms and Policies</string>
    <string name="settings_privacy_info">Show profile info only for friends</string>
    <string name="settings_privacy_friends">Show my friends only for friends</string>
    <string name="settings_privacy_gifts">Show gifts only for friends</string>
    <string name="settings_privacy_gallery">Show my gallery only for friends</string>
    <string name="label_deactivate_title">Leave us?</string>
    <string name="label_deactivate_subtitle">If you continue, then all your personal data as well as content (for example: private messages, notifications, posts, comments, etc.) created by you will be permanently deleted! You will not be able to restore your account and data! In the future, if you wish to return, you will have to create a new account!</string>
    <string name="settings_privacy_video_calls" translatable="false">I allow video calls</string>
    <string name="label_auth_terms_promo">By continuing, you agree to our</string>
    <string name="label_auth_login_promo">Already have an account?</string>
    <string name="action_auth_email">Register by Email</string>
    <string name="action_auth_google">Continue with Google</string>
    <string name="action_auth_phone">Continue with Phone Number</string>
    <string name="auth_2fa_title">Authorization by phone number</string>
    <string name="auth_2fa_subtitle_progress">Loading… Please wait…</string>
    <string name="auth_2fa_subtitle_phone">Enter your mobile phone number</string>
    <string name="auth_2fa_subtitle_phone_hint">Mobile phone number</string>
    <string name="auth_2fa_subtitle_code">Enter the code from the SMS</string>
    <string name="action_send_code">Send code</string>
    <string name="action_explore_free">Explore without authorization</string>
</resources>